--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
 <head>
 	<title>Ardha Apps</title>
+	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-	<center><h1>Welcome To Ardha Apps Page</h1></center>
-
+    <div class="container">
+    	<center><h1>Welcome To Ardha Apps</h1></center>
+    </div>
 </body>
 </html>
