--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <link href="assets/css/style.css" rel="stylesheet">
 
          <meta name="title" content="Ardha Apps">
-        <meta name="description" content="We are an mobile application development company.">
+        <meta name="description" content="Ardha Apps is Born to Develop Apps.">
         <meta name="keywords" content="android application company">
         <meta name="robots" content="index, follow">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -33,12 +33,12 @@
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://ardhaapps.github.io/">
         <meta property="og:title" content="Ardha Apps">
-        <meta property="og:description" content="We are an mobile application development company">
+        <meta property="og:description" content="Ardha Apps is Born to Develop Apps">
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://ardhaapps.github.io">
         <meta property="twitter:title" content="Ardha Apps">
-        <meta property="twitter:description" content="We are an mobile application development company">
+        <meta property="twitter:description" content="Ardha Apps is Born to Develop Apps">
         <!-- Google Tag Manager -->
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -110,28 +110,28 @@
                         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
                             <div class="icon-box">
                                 <div class="icon"><i class="bi bi-globe"></i></div>
-                                <h4 class="title"><a href="#">Web Development</a></h4>
-                                <p class="description">Grow your business with a Website</p>
+                                <h4 class="title"><a>Web Development</a></h4>
+                                <p class="description">To Grow your business unique With a Well-Optimized Website and Responsive</p>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
                             <div class="icon-box">
                                 <div class="icon"><i class="bi bi-phone"></i></div>
-                                <h4 class="title"><a href="#">Mobile Application Development</a></h4>
+                                <h4 class="title"><a>Mobile Application Development</a></h4>
                                 <p class="description">Grow your business with a Mobile Application and enhance you customer</p>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
                             <div class="icon-box">
                                 <div class="icon"><i class="bi bi-lightbulb"></i></div>
-                                <h4 class="title"><a href="#">Digital Marketing</a></h4>
-                                <p class="description">Grow your business with a Digitally</p>
+                                <h4 class="title"><a>Digital Marketing</a></h4>
+                                <p class="description">Growing your business with a Clear Roadmap to Online and Clear Marketing Direction</p>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="300">
                             <div class="icon-box">
                                 <div class="icon"><i class="bi bi-bar-chart"></i></div>
-                                <h4 class="title"><a href="#">SEO</a></h4>
+                                <h4 class="title"><a>SEO</a></h4>
                                 <p class="description">Grow your business with a solution that will enhance your online visibility</p>
                             </div>
                         </div>
@@ -195,7 +195,7 @@
                             <div class="icon-box">
                                 <i class="bi bi-globe"></i>
                                 <h4><a href="#">Web Development</a></h4>
-                                <p>Grow your business with a Website</p>
+                                <p>To Grow your business unique With a Well-Optimized Website and Responsive</p>
                             </div>
                         </div>
                         <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
@@ -209,7 +209,7 @@
                             <div class="icon-box">
                                 <i class="bi bi-lightbulb"></i>
                                 <h4><a href="#">Digital Marketing</a></h4>
-                                <p>Grow your business with a Digitally</p>
+                                <p>Grow your business with a Clear Roadmap to Online and Clear Marketing Direction</p>
                             </div>
                         </div>
                         <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
@@ -384,7 +384,7 @@
                             </p>
                         </div>
                         <div class="col-lg-3 col-md-6 footer-info">
-                            <h3>About Anyar</h3>
+                            <h3>About Ardhaappps</h3>
                             <p>Ardha Apps Born to Develop Apps.</p>
                             <div class="social-links mt-3">
                                 <a href="https://www.facebook.com/ardhaapps" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -396,8 +396,8 @@
             </div>
             <div class="container">
                 <div class="copyright">
-                    &copy; Copyright <strong><span>Ardha Apps</span></strong>. All Rights Reserved
-                </div>
+                    &copy; Copyright 2019 - <span id="copy-right-year"></span> <strong><span>Ardha Apps</span></strong>. All Rights Reserved
+                </div> 
             </div>
         </footer>
         <!-- End Footer -->
@@ -430,4 +430,8 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     </body>
+    <script src="assets/js/jquery.min.js"></script>
+    <script type="text/javascript">
+        $('#copy-right-year').html(new Date().getFullYear());
+    </script>
 </html>
